# ai_data_analyst

./: README.md  amazon.db  main.py  pyproject.toml
