[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
]
